--- a/src/app/spiritual/spiritual.html
+++ b/src/app/spiritual/spiritual.html
@@ -17,7 +17,7 @@
 		<div class='row'>
 			<section class='lefttext col-md-6 col-md-offset-1'>
 				<h2>Spiritual Life</h2>
-				<h3>Spritual Life Teams</h3>
+				<h3 id='spirituallife'>Spiritual Life Teams</h3>
 				<h4>CURRENTLY THERE ARE FOUR SPIRITUAL LIFE TEAMS AT CBCC
 				</h4>
 				<h5 id='team1'>Team 1: Leader is Susan Martin</h5>
@@ -60,6 +60,7 @@
 			</section><!--lefttext-->
 			<section class='rightlinks col-md-2 col-md-offset-1'>
 					<h3>Spiritual Life</h3>
+					<a ng-click="scrollTo('spiritualife')">Spiritual Life Teams</a>
 					<a ng-click="scrollTo('team1')">Team 1</a>
 					<a ng-click="scrollTo('team2')">Team 2</a>
 					<a ng-click="scrollTo('team3')">Team 3</a>
