--- a/src/app/ministries/ministries.html
+++ b/src/app/ministries/ministries.html
@@ -54,7 +54,7 @@
 				<p>Coleman Todd: Associate for Church Growth, Social Justice and Education</p>
 				<h4 id='adultbible'>Adult Bible Discussion</h4>		
 				<h5>Sundays at 9:00am and Tuesdays at 2:00pm</h5>
-				<h5>Facilatator: Loren Bowling</h5>
+				<h5>Facilitator: Loren Bowling</h5>
 				<p>	
 				This class is based on the Standard Lesson Quarterly [NIV]. SLQ combines meaningful Bible study with culturally relevant examples and discussion questions.       
 				</p>	
