added the blog reading to the site

--- a/src/app/events/events.html
+++ b/src/app/events/events.html
@@ -7,15 +7,22 @@
     <a ui-sref="learn">ABOUT</a>
     <a ui-sref="ministries">MINISTRIES</a>
     <a ui-sref="facilities">WEDDINGS</a>
-    <a ui-sref="opportunities">SERVE</a>
+    <a ui-sref="events">EVENTS</a>
     <a ui-sref="give">GIVE</a>
-  </nav>
+	<p class='wtimes'>WORSHIP: SUNDAYS AT 10:00AM FELLOWSHIP: 11:00AM</p>
+	</nav>
   <section class='pagescontent'>
 		<div class='topimage'>
 		</div>
 		<div class='row'>
 			<section class='lefttext col-md-6 col-md-offset-1'>
 				<h2>Events</h2>
+				<h3 id='upcoming'>Upcoming Events</h3>
+				<div data-ng-repeat='post in events.posts'>
+						<p data-ng-bind='post.title'></p>	
+						<p data-ng-bind='post.body'></p>
+						<a ng-href='{{post.post_url}}' target='_blank'>View this event on our tumblr page</a>
+				</div>
 				<h4>Local:</h4>
 				<h4>Beyond:</h4>
 				<p>Events</p>
@@ -25,13 +32,40 @@
 				<a href='http://www.globalministries.org/'>UCC Global Ministries</a><br />
 			</section><!--lefttext-->
 			<section class='rightlinks col-md-2 col-md-offset-1'>
-					<h3>Opportunities</h3>
-					<p>Placeholder</p>
-					<p>Placeholder</p>
-					<p>Placeholder</p>
-					<p>Placeholder</p>
-					<p>Placeholder</p>
+					<h3>Upcoming</h3>
+				<div data-ng-repeat='post in events.posts'>
+						<p data-ng-bind='post.title'></p>	
+				</div>
 			</section><!--rightlinks-->
 		</div>
   </section>
 </div>
+  <footer>
+  <p class='statement col-md-10 col-md-offset-1'>This Sanctuary is a Safe Place for all People to Worship, Regardless of Race, Creed, Gender, Cultural
+  Background or Sexual Orientation.</p>
+  <div class='row linksandlogo'>
+		<div class='col-md-offset-3 col-sm-offset-1 col-xs-offset-1 col-md-1 col-sm-2 col-xs-3'>
+				<a href='http://www.ucc.org/' target='_blank' alt='UCC home page'>
+					<img class='img-responsive' src='assets/images/ucclogo.gif' alt='UCC logo'>
+				</a>
+		</div>
+		<div class='footlinkcontainer col-md-7'>
+				<div class='col-md-10 col-xs-8 locinfo row'>
+						<span>
+						Cocoa Beach Community Church, 126 South Atlantic Avenue, Cocoa Beach, FL  32931 
+						</span>
+						<span>
+						(321) 783-3961
+						</span>
+		</div>
+		<div class='row'>
+		<div class='col-md-10 col-sm-8 footlinks'>
+				<a ui-sref='home'>Home</a>
+				<a ui-sref='learn'>Learn More</a>
+				<a ui-sref='ministries'>Ministries</a>
+				<a class='hidden-xs' ui-sref='facilities'>Facilities</a>
+				<a class='hidden-xs' ui-sref='spiritual'>Spiritual Life</a>
+		</div><!--footlinkcontainer-->
+		</div>
+	</div><!--row-->
+  </footer>
