--- a/src/app/give/give.html
+++ b/src/app/give/give.html
@@ -7,9 +7,10 @@
     <a ui-sref="learn">ABOUT</a>
     <a ui-sref="ministries">MINISTRIES</a>
     <a ui-sref="facilities">WEDDINGS</a>
-    <a ui-sref="opportunities">SERVE</a>
+    <a ui-sref="events">EVENTS</a>
     <a ui-sref="give">GIVE</a>
-  </nav>
+	<p class='wtimes'>WORSHIP: SUNDAYS AT 10:00AM FELLOWSHIP: 11:00AM</p>
+	</nav>
   <section class='pagescontent'>
 		<div class='topimage'>
 		</div>
@@ -23,10 +24,6 @@
 			<p>
 			Stewardship is about making choices, as individuals and in community.  It is more than giving money to the church. Stewardship is about being faithful disciples, caring for and managing all that God has given us.  Stewardship is the grateful response to God’s grace and goodness.  It requires a consideration of how our choices affect us and others, of how we can be good caretakers of the created world, and of how we can best serve God and disciples of Christ.
 			</p>
-			<p>
-Please use the PayPal ink below to pay your weekly pledge or give a donation to the General Fund. ( info about how to proceed with Paypal?)
-			</p>
-			<h3 id='donate'>need you guys to get me button info</h3>
 			<h3 id='ourchurch'>OUR CHURCH WIDER MISSION (OCWM)</h3>
 			<h4>UNITED CHURCH OF CHRIST SPECIAL SUPPORT</h4>
 			<p>
@@ -67,3 +64,32 @@ Please use the PayPal ink below to pay your weekly pledge or give a donation to 
 		</div>
   </section>
 </div>
+  <footer>
+  <p class='statement col-md-10 col-md-offset-1'>This Sanctuary is a Safe Place for all People to Worship, Regardless of Race, Creed, Gender, Cultural
+  Background or Sexual Orientation.</p>
+  <div class='row linksandlogo'>
+		<div class='col-md-offset-3 col-sm-offset-1 col-xs-offset-1 col-md-1 col-sm-2 col-xs-3'>
+				<a href='http://www.ucc.org/' target='_blank' alt='UCC home page'>
+					<img class='img-responsive' src='assets/images/ucclogo.gif' alt='UCC logo'>
+				</a>
+		</div>
+		<div class='footlinkcontainer col-md-7'>
+				<div class='col-md-10 col-xs-8 locinfo row'>
+						<span>
+						Cocoa Beach Community Church, 126 South Atlantic Avenue, Cocoa Beach, FL  32931 
+						</span>
+						<span>
+						(321) 783-3961
+						</span>
+		</div>
+		<div class='row'>
+		<div class='col-md-10 col-sm-8 footlinks'>
+				<a ui-sref='home'>Home</a>
+				<a ui-sref='learn'>Learn More</a>
+				<a ui-sref='ministries'>Ministries</a>
+				<a class='hidden-xs' ui-sref='facilities'>Facilities</a>
+				<a class='hidden-xs' ui-sref='spiritual'>Spiritual Life</a>
+		</div><!--footlinkcontainer-->
+		</div>
+	</div><!--row-->
+  </footer>
