--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -92,6 +92,12 @@ body {
 	}
   }
 }
+.otherpages{
+	.wtimes{
+		color: orange !important;
+		text-shadow: none !important;		
+	}
+}
 .carousel .item {
   width: 100%; /*slider width*/
   max-height: 70vh; /*slider height*/
@@ -194,6 +200,9 @@ body {
 }
 
 //need to deal with this
+.otherpages{
+	padding-bottom: 4em;
+}
 footer {
 	overflow: hidden;
   	border-top: 3px solid lightgray;
@@ -264,7 +273,7 @@ footer {
 			}
 			h3{
 				font-size:2.5em;
-				margin-top: 3em;	
+				margin-top: 1em;	
 				margin-bottom:1em;
 			}
 			h4{
@@ -295,6 +304,7 @@ footer {
 		div{
 			padding:0;
 			overflow: hidden;	
+			margin-top: 2em;
 		}
 	img {
 		width: 100%;
