--- a/src/app/ministries/ministries.html
+++ b/src/app/ministries/ministries.html
@@ -7,9 +7,10 @@
     <a ui-sref="learn">ABOUT</a>
     <a ui-sref="ministries">MINISTRIES</a>
     <a ui-sref="facilities">WEDDINGS</a>
-    <a ui-sref="opportunities">SERVE</a>
+    <a ui-sref="events">EVENTS</a>
     <a ui-sref="give">GIVE</a>
-  </nav>
+	<p class='wtimes'>WORSHIP: SUNDAYS AT 10:00AM FELLOWSHIP: 11:00AM</p>
+	</nav>
   <section class='pagescontent'>
 		<div class='topimage'>
 		</div>
@@ -21,7 +22,7 @@
 				<p>Minister: Rev. Dr. Bill Tyson</p>
 				<h3 id='sundayservants'>Sunday Servants</h3>
 				<h4>Sunday School Leadership Team</h4>
-				<p>no static info yet... contact Coleman Todd</p>
+				<p>Contact Coleman Todd at coleman@cbcc-ucc.org</p>
 				<h4>Ushers and Greeters</h4>
 				<p>Be an usher or a greeter. This is an important and vital service to our worshipping community. A greeter’s warm smile and a friendly “good morning” at the door makes anyone feel better. Our ushers make sure everyone finds a comfortable seat and has a worship bulletin. Ushers participate in the worship service too; lighting altar candles, collecting the offering and serving communion. 
 				</p>
@@ -42,7 +43,7 @@
 				<p>Choir Rehearsas are Wednesdays evenings at 7:00 PM and Sunday Mornings at 9:30AM in Sponsler Hall. Our church choir offers an inspiring anthem almost every week. We also have a talented rotation of soloists and ensemble teams that encompass other musical genres creating a diverse musical experience on Sundays. Come and share your musical talents with us!
 				</p>
 				<h5>Choir Director</h5>
-				<p>Jan Johns (Picture if she wants… I have a bio for Jan Johns too that we could include here) 
+				<p>Jan Johns
 				</p>
 				<h5>Church Organist</h5>
 				<p>David Wrable</p>
@@ -59,9 +60,11 @@
 				This class is based on the Standard Lesson Quarterly [NIV]. SLQ combines meaningful Bible study with culturally relevant examples and discussion questions.       
 				</p>	
 				<h4 id='childrenand'>Children and Youth Programs</h4>	
-				<p>
-				NO CURRENT PLAN FOR HERE…..WE WILL HAVE STATIC INFO SOON AND EVENTUALLY IT WOULD BE NICE TO HAVE A LINK PULL CURRENT INFO FROM A BLOG HERE.
-				</p>
+				<div data-ng-repeat='post in ministries.posts'>
+						<p data-ng-bind='post.title'></p>	
+						<p data-ng-bind='post.body'></p>
+						<a ng-href='{{post.post_url}}' target='_blank'>Click here to view this post on our blog</a>
+				</div>
 				<h4 id='centerfor'>
 				CENTER FOR SPIRITUAL ENRICHMENT
 				</h4>
@@ -158,3 +161,32 @@
 		</div>
   </section>
 </div>
+  <footer>
+  <p class='statement col-md-10 col-md-offset-1'>This Sanctuary is a Safe Place for all People to Worship, Regardless of Race, Creed, Gender, Cultural
+  Background or Sexual Orientation.</p>
+  <div class='row linksandlogo'>
+		<div class='col-md-offset-3 col-sm-offset-1 col-xs-offset-1 col-md-1 col-sm-2 col-xs-3'>
+				<a href='http://www.ucc.org/' target='_blank' alt='UCC home page'>
+					<img class='img-responsive' src='assets/images/ucclogo.gif' alt='UCC logo'>
+				</a>
+		</div>
+		<div class='footlinkcontainer col-md-7'>
+				<div class='col-md-10 col-xs-8 locinfo row'>
+						<span>
+						Cocoa Beach Community Church, 126 South Atlantic Avenue, Cocoa Beach, FL  32931 
+						</span>
+						<span>
+						(321) 783-3961
+						</span>
+		</div>
+		<div class='row'>
+		<div class='col-md-10 col-sm-8 footlinks'>
+				<a ui-sref='home'>Home</a>
+				<a ui-sref='learn'>Learn More</a>
+				<a ui-sref='ministries'>Ministries</a>
+				<a class='hidden-xs' ui-sref='facilities'>Facilities</a>
+				<a class='hidden-xs' ui-sref='spiritual'>Spiritual Life</a>
+		</div><!--footlinkcontainer-->
+		</div>
+	</div><!--row-->
+  </footer>
