added the two blog reads to their respective pages, changed some of the button tags on the main page

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -74,7 +74,7 @@
             </div>
           </a><!--linktile-->
         </div><!--linkcontainer-->
-        <p class="description">Worship, Education, Mission, Pastoral Care, Women's Fellowship and much more.</p>
+        <p class="description">Worship, Education, Mission, Pastoral Care, Women's Fellowship and much more</p>
       </div><!--linkanddescontainer-->
 
       <div class="linkanddesccontainer col-md-4 col-md-offset-2">
@@ -126,7 +126,7 @@
             </div>
           </a><!--linktile-->
         </div><!--linkcontainer-->
-        <p class="description">All about the center for spiritual enrichment</p>
+        <p class="description">All about the center for spiritual enrichment.</p>
       </div><!--linkanddescontainer-->
     </div><!--row-->
     <div class="row tilerow"><!--TILE ROW START-->
@@ -139,12 +139,12 @@
               </div>
               <div class="linktiletext">
                 <p class="linkname">Thrift Shop</p>
-                <p class="linksubtitle">Open daily</p>
+                <p class="linksubtitle">Visit our little shop of treasures</p>
               </div>
             </div>
           </a><!--linktile-->
         </div><!--linkcontainer-->
-        <p class="description">Short summary about the thrift shop, perhaps the hours</p>
+        <p class="description">Open Mon. &amp; Thurs. 9:30 - 3:00 and Fri. &amp; Sat. 10:00 - 1:00.</p>
       </div><!--linkanddescontainer-->
 
       <div class="linkanddesccontainer col-md-4 col-md-offset-2">
@@ -156,12 +156,12 @@
               </div>
               <div class="linktiletext">
 					  <p class="linkname">Womens Fellowship</p>
-                <p class="linksubtitle">some subtitle</p>
+                <p class="linksubtitle">Fellowship, service and more</p>
               </div>
             </div>
           </a><!--linktile-->
         </div><!--linkcontainer-->
-        <p class="description">A short summary of some type here</p>
+        <p class="description">Join us for our monthly meeting.</p>
       </div><!--linkanddescontainer-->
     </div><!--row-->
     <div class="row tilerow"><!--TILE ROW START-->
