added the final blog and moved the others, added the google analytics, changed some subtitles

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -126,7 +126,7 @@
             </div>
           </a><!--linktile-->
         </div><!--linkcontainer-->
-        <p class="description">All about the center for spiritual enrichment.</p>
+        <p class="description">Transforming the spiritual lives of people in all circumstances, faith traditions and cultures.</p>
       </div><!--linkanddescontainer-->
     </div><!--row-->
     <div class="row tilerow"><!--TILE ROW START-->
