--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -86,7 +86,7 @@
               </div>
               <div class="linktiletext">
                 <p class="linkname">Facilities</p>
-                <p class="linksubtitle">Whats available</p>
+                <p class="linksubtitle">What's available</p>
               </div>
             </div>
           </a><!--linktile-->
@@ -104,7 +104,7 @@
               </div>
               <div class="linktiletext">
                 <p class="linkname">Events</p>
-                <p class="linksubtitle">Whats happening now?</p>
+                <p class="linksubtitle">What's happening now?</p>
               </div>
             </div>
           </a><!--linktile-->
