--- a/src/app/thriftshop/thriftshop.html
+++ b/src/app/thriftshop/thriftshop.html
@@ -24,7 +24,7 @@
 				Visit our Facebook page at <a href="https://www.facebook.com/profile.php?id=100006235637971">https://www.facebook.com/profile.php?id=100006235637971</a>
 				</p>
 				<p>
-				Since 1965 the Community Church has served Cocoa Beach by operating our Thrift Shop.  We started as a couple of women sitting at a card table after church selling baby clothes.  Today we five rooms packed to the rafters with clothing, glassware, decorative items, linens, books, records, DVDs, collectibles and holiday decorations.
+				Since 1965 the Community Church has served Cocoa Beach by operating our Thrift Shop.  We started as a couple of women sitting at a card table after church selling baby clothes.  Today we have five rooms packed to the rafters with clothing, glassware, decorative items, linens, books, records, DVDs, collectibles and holiday decorations.
 				</p>
 				<h3 id='purpose'>The purpose of the Thrift Shop is two fold:</h3>
 				<ol>
