--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -4,6 +4,10 @@ h1, h2, h3, h4, h5, h6, p, a, span{
 body {
 	background-color: #F7F7F0;
 }
+.paypalButton{
+	text-align: center;
+	margin-top: 3em;
+}
 #container{
   position:relative;
   header{
