--- a/src/app/give/give.html
+++ b/src/app/give/give.html
@@ -17,6 +17,14 @@
 		<div class='row'>
 			<section class='lefttext col-md-6 col-md-offset-1'>
 			<h2>Give</h2>
+			<h3>Make a one time donation</h3>
+			<p>Click the button below to make a one time or recurring monthly donation.</p>
+			<form class='paypalButton' action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
+					<input type="hidden" name="cmd" value="_s-xclick">
+					<input type="hidden" name="hosted_button_id" value="F9XXJ3RWDA9B2">
+					<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+					<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+			</form>
 			<h3>CBCC STEWARDSHIP PLEDGES</h3>
 			<p>
 			We are grateful for the generosity of our members and friends who make up the congregation of Cocoa Beach Community Church.  It truly takes all of us working together to allow us to continue to provide for all the needs of our church and the needs of those in our community who depend on us. 
